--- a/packages/themes/src/bits-ui/switch.css
+++ b/packages/themes/src/bits-ui/switch.css
@@ -6,7 +6,8 @@
   @apply bg-none border-surface-z3 border-2 bg-surface-z2 rounded-lg;
 }
 
-[data-style='bits-ui'] [data-switch-thumb] {
+[data-style='bits-ui'] [data-switch] [data-switch-thumb] {
+  --switch-thumb-travel: 1rem;
   @apply bg-surface-z5 rounded;
 }
 
