--- a/packages/themes/src/daisy-ui/switch.css
+++ b/packages/themes/src/daisy-ui/switch.css
@@ -8,7 +8,8 @@
   @apply bg-none border-surface-z4 rounded-full border-2 bg-transparent;
 }
 
-[data-style='daisy-ui'] [data-switch-thumb] {
+[data-style='daisy-ui'] [data-switch] [data-switch-thumb] {
+  --switch-thumb-travel: 1rem;
   @apply bg-surface-z5 rounded-full;
 }
 
