--- a/packages/themes/src/minimal/switch.css
+++ b/packages/themes/src/minimal/switch.css
@@ -8,7 +8,8 @@
   background-image: none;
 }
 
-[data-style='minimal'] [data-switch-thumb] {
+[data-style='minimal'] [data-switch] [data-switch-thumb] {
+  --switch-thumb-travel: 1.25rem;
   @apply bg-surface-z1;
 }
 
